--- a/surveyN.html
+++ b/surveyN.html
@@ -59,10 +59,10 @@
         <h3 style="font-size: large; color: coral;">Please answer the questions:</h3>
         <ul style="list-style-type:none">
             <li><h3>1.) I have a hard time feeling relaxed</h3></li>
-            <input type="radio" name="ans" value="1">Almost always
-            <input type="radio" name="ans" value="2">Some of the time
-            <input type="radio" name="ans" value="3">Never
-            
+            <input type="radio" name="an" value="1">Almost always
+            <input type="radio" name="an" value="2">Some of the time
+            <input type="radio" name="an" value="3">Never
+
              <br> </br>
             <li><h3>2.) I feel like I don't have enough time to get everything done </h3></li>
             <input type="radio" name="ans" value="1">Almost always
@@ -71,21 +71,21 @@
 
             <br><br>
             <li><h3>3.) I feel very sensitive</h3></li>
-            <input type="radio" name="ans" value="1">Almost always
-            <input type="radio" name="ans" value="2">Some of the time 
-            <input type="radio" name="ans" value="3">Never
+            <input type="radio" name="answ" value="1">Almost always
+            <input type="radio" name="answ" value="2">Some of the time 
+            <input type="radio" name="answ" value="3">Never
 
             <br><br>
             <li><h3>4.) I don't have time to spend on personal hobbies</h3></li>
-            <input type="radio" name="ans" value="1">Almost always
-            <input type="radio" name="ans" value="2">Some of the time 
-            <input type="radio" name="ans" value="3">Never
+            <input type="radio" name="answe" value="1">Almost always
+            <input type="radio" name="answe" value="2">Some of the time 
+            <input type="radio" name="answe" value="3">Never
 
             <br><br>
             <li><h3>5.) I feel stressed out overall</h3></li>
-            <input type="radio" name="ans" value="1">Almost always
-            <input type="radio" name="ans" value="2">Some of the time 
-            <input type="radio" name="ans" value="3">Never
+            <input type="radio" name="answer" value="1">Almost always
+            <input type="radio" name="answer" value="2">Some of the time 
+            <input type="radio" name="answer" value="3">Never
         
         </ul>
 
